@@ -22,6 +22,7 @@ version <next>:
 - RF64 support in WAV muxer
 - noise filter ported from libmpcodecs
 - Subtitles character encoding conversion
+- blend filter
 
 
 version 1.1:
